--- a/albumpage.html
+++ b/albumpage.html
@@ -664,7 +664,7 @@
         <div class="Album-Image mt-5 mt-sm-4 mt-md-0">
           <img
                   class="img-fluid"
-                  src="${albumData.cover}"
+                  src="${albumData.cover_big}"
                   alt="${albumData.title}"
                 />
                 </div>
@@ -729,7 +729,7 @@
         parent.innerHTML += albumPartTemplate;
 
         for (const track of albumData.tracks.data) {
-          let duration = new Date(track.duration).getMinutes();
+          let duration = convertToMinSec(track.duration);
 
           let titleRowTemplate = `
           <div class="row">
@@ -744,6 +744,16 @@
             </div>`;
           tracksParent.innerHTML += titleRowTemplate;
         }
+      }
+
+      function convertToMinSec(seconds) {
+        let minutes = 0;
+        while (seconds > 60) {
+          seconds -= 60;
+          minutes += 1;
+        }
+        if (seconds < 10) seconds = "0" + seconds;
+        return (minutes + ":" + seconds).toString();
       }
     </script>
 
