--- a/albumpage.html
+++ b/albumpage.html
@@ -678,7 +678,7 @@
               <div class="Album-Year-Num-Songs mt-3">
                 <span class="Album-Year">${albumYear}</span>
                 <span class="dot">•</span>
-                <span class="Album-Num-Songs">${albumData.nb_tracks}</span>
+                <span class="Album-Num-Songs">${albumData.nb_tracks} tracks</span>
                 </div>
               <div class="Icons text-white mb-4">
                 <span class="Save-to-Your-Library-Icon text-white text-center">
